--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dynamic = ["version", "description"]
 requires-python = ">=3.7" 
 dependencies = [
     "pytest",
-    "networkx" == 2.5,
+    "networkx",
 ]
 
 [project.urls]
